--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="icon" href="https://cdn.discordapp.com/attachments/854737301280129057/855712849027268608/Matis.jpg">
 <title> Wygrałeś ajfona</title>
 <center> <h1><font color="red"> Witaj użytkowniku </font> </center>
 <b> <h3> Wygrałeś </b> nowego <b> ajfona 30 pro max ultra 1024GB. </b> </h3>
