--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="icon" href="https://cdn.discordapp.com/attachments/854737301280129057/855712849027268608/Matis.jpg">
-<title> Wygrałeś ajfona</title>
-<center> <h1><font color="red"> Witaj użytkowniku </font> </center>
-<b> <h3> Wygrałeś </b> nowego <b> ajfona 30 pro max ultra 1024GB. </b> </h3>
+<title>Klasa 7B</title>
+<center> <h1><font color="red"> Witaj na stronie Klasy 7B </font> </center>
+<p> <center> Aktualności </center>
 <p> <b> Wypełnij formularz </b> który znajduje się <b> poniżej</b> i ciesz się swoim <b> nowym ajfonem.</b> 
 <p> <h3> <b> Odnośnik do formularza </b> <a href=https://forms.gle/mJya98H1s6wKcn1Q9>[kliknij tutaj]</a> </h3>
