--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="icon" href="https://cdn.discordapp.com/attachments/854737301280129057/855712849027268608/Matis.jpg">
 <title>Klasa 7B</title>
 <center> <h1><font color="red"> Witaj na stronie Klasy 7B </font> </center>
-<p> <center> <font size="60"> Aktualności </font> </center>
-<p> <font size="50"> ZAPRASZAMY NA BAZAR </font>
+<p> •<center> <font size="50"> Aktualności </font> </center>
+<p> <font size="50">• ZAPRASZAMY NA BAZAR </font>
 <p> <h3> <b> Odnośnik do formularza </b> <a href=https://forms.gle/mJya98H1s6wKcn1Q9>[kliknij tutaj]</a> </h3>
