--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@
 <p> •<center> <font size="50"> Aktualności </font> </center>
 <p> <font size="50">• ZAPRASZAMY NA BAZAR </font>
 <p> <h3> <b> Odnośnik do formularza </b> <a href=https://forms.gle/mJya98H1s6wKcn1Q9>[kliknij tutaj]</a> </h3>
+<script>
+
+alert ("WITAJ")
+</script>
