--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <title>Klasa 7B</title>
 <center> <h1><font color="red"> Witaj na stronie Klasy 7B </font> </center>
 <p> •<center> <font size="50"> Aktualności </font> </center>
-<p> <font size="50">• ZAPRASZAMY NA BAZAR </font>
+<p> <font size="40">• ZAPRASZAMY NA BAZAR </font>
 <p> <h3> <b> Odnośnik do formularza </b> <a href=https://forms.gle/mJya98H1s6wKcn1Q9>[kliknij tutaj]</a> </h3>
 <script>
 
-alert ("WITAJ")
+alert ("Witaj, aby przejść do strony należy być człowiekiem")
 </script>
