--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-?
+? H
 <div id="Licznik"> ez</div>
    
 <script>
@@ -11,3 +11,4 @@
       
 document.getElementById("licznik").innerHTML = days + " " ;
 </script>
+Bggggggh
